# wireguard-gui

./: .gitignore  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-me.sh  tailwind.config.js
contrib/: wg_db.service
docs/: CHANGELOG.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  INSTALLATION.md  OPERATIONS.md  RELEASE_CHECKLIST.md  UPGRADE.md  USER_GUIDE.md
migrations/: README.md
scripts/: db_backfill_v0_4.py  db_validate.py
src/: client_secrets.json  client_secrets.json.example  config.yaml  logger.conf  logger.py
src/gui/: __init__.py  errors.py  oidc.py
src/gui/integrations/wireguard/: __init__.py  adapter.py
src/gui/models/: __init__.py  config.py  domain.py  network.py  peer.py  user.py
src/gui/repositories/: __init__.py  network_repository.py  peer_repository.py
src/gui/routes/: __init__.py  dashboard.py  domain.py  helpers.py  main.py  network.py  peer.py  setting.py  user.py  wizard.py
src/gui/services/: __init__.py  network_service.py  peer_service.py  runtime_sync_service.py
src/gui/static/css/: style.css
src/gui/static/src/: tailwind.input.css
src/gui/templates/: about.html  base.html  dashboard.html  help.html  index.html  login.html  network_detail.html  networks.html  peer_detail.html  peers.html  profile.html  register.html  settings.html  test.html  wizard_setup.html
src/gui/utils/: __init__.py  command_runner.py
src/wireguard_tools/: cli.py  pyproject.toml  wireguard_config.py  wireguard_device.py  wireguard_netlink.py  wireguard_uapi.py
tests/: test_app_smoke.py  test_cli_commands.py  test_config_parsing.py  test_helpers_parsing.py  test_runtime_sync_guards.py  test_uapi_protocol.py  test_wireguard_key.py
