# SPDX-FileCopyrightText: 2022-2024 Carnegie Mellon University
# SPDX-License-Identifier: 0BSD

[tool.poetry]
name = "wireguard-tools"
version = "0.4.7.post.dev0"
description = "Pure python reimplementation of wireguard-tools"

[tool.poetry.group.dev.dependencies]
black = { version=">=24.3.0", python = "^3.8" }
poethepoet = "^0.16.5"
pre-commit = { version = "^3.5.0", python = "^3.8.1" }
tbump = "^6.9.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.991"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
# Explicit is better than implicit
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest decorators are not typed
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "pyroute2.*"
ignore_missing_imports = true

[tool.poe]
include = "tasks.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"